--- a/mysql-5.7.18/my.cnf
+++ b/mysql-5.7.18/my.cnf
@@ -1,17 +1,17 @@
 [client]
 user=root 
-socket=/usr/local/mysql/sock/cloud101.sock
+socket=/usr/local/mysql/sock/XXXXX.sock
 
 [mysqld_safe]
 #-------------------------------------------------------------
 # environments
 #-------------------------------------------------------------
-#ledir                   = /MYSQL/cloud101/product/bin
+#ledir                   = /MYSQL/XXXXX/product/bin
 #-------------------------------------------------------------
 # log
 #-------------------------------------------------------------
 ##error log
-#log-error 		= /MYSQL/cloud101/log/cloud101.err
+#log-error 		= /MYSQL/XXXXX/log/XXXXX.err
 
 
 [mysqld]
@@ -20,11 +20,11 @@ socket=/usr/local/mysql/sock/cloud101.sock
 #-------------------------------------------------------------
 user			    = mysql
 port             	= 3301
-socket           	= /usr/local/mysql/sock/cloud101.sock
-#pid-file         	= /usr/local/mysql/sock/cloud101.pid
-basedir          	= /MYSQL/cloud101
-datadir          	= /MYSQL/cloud101/data
-tmpdir           	= /MYSQL/cloud101/work/tmp
+socket           	= /usr/local/mysql/sock/XXXXX.sock
+#pid-file         	= /usr/local/mysql/sock/XXXXX.pid
+basedir          	= /MYSQL/XXXXX
+datadir          	= /MYSQL/XXXXX/data
+tmpdir           	= /MYSQL/XXXXX/work/tmp
 lc-messages-dir     = /usr/share/mysql
 language            = /usr/share/mysql/english
 plugin_dir          = /usr/lib64/mysql/plugin
@@ -47,24 +47,24 @@ secure_file_priv		= ""
 # log
 #-------------------------------------------------------------
 ##binary log
-log-bin          	  = /MYSQL/cloud101/binlog/binarylog
+log-bin          	  = /MYSQL/XXXXX/binlog/binarylog
 binlog_format    	  = ROW
 sync_binlog	 	  = 1
 log_bin_trust_function_creators = 1
 
 ##relay log
-relay-log                = /MYSQL/cloud101/binlog/cloud101-relay-bin
-relay-log-index          = /MYSQL/cloud101/binlog/cloud101-relay-bin.index
+relay-log                = /MYSQL/XXXXX/binlog/XXXXX-relay-bin
+relay-log-index          = /MYSQL/XXXXX/binlog/XXXXX-relay-bin.index
 log_slave_updates
 
 ##slow query log
 slow_query_log   	  = 1
 long_query_time  	  = 1
-slow_query_log_file 	  = /MYSQL/cloud101/log/slow-queries.log
+slow_query_log_file 	  = /MYSQL/XXXXX/log/slow-queries.log
 log_slow_slave_statements = 1
 
 ##general query log
-#general-log      	  = /usr/local/mysql/log/cloud101/access.log
+#general-log      	  = /usr/local/mysql/log/XXXXX/access.log
 
 #-------------------------------------------------------------
 # connections
@@ -111,9 +111,9 @@ skip-external-locking
 ##general setting
 default-storage-engine			= InnoDB 
 innodb_strict_mode			= 1
-innodb_data_home_dir      		= "/MYSQL/cloud101/innodb/"
+innodb_data_home_dir      		= "/MYSQL/XXXXX/innodb/"
 innodb_data_file_path     		= "d1:256M:autoextend"
-innodb_log_group_home_dir 		= /MYSQL/cloud101/innodb-log
+innodb_log_group_home_dir 		= /MYSQL/XXXXX/innodb-log
 
 ##data file setting 
 innodb_file_per_table			= 1
